@@ -1,6 +1,9 @@
 Revision history for Dist-Zilla-Plugins-CJM
 
 4.00   NOT
+	Dist::Zilla::Plugin::TemplateCJM
+	  - Add changelog_re parameter
+
 	- Tests now use Test::DZil
 
 3.05   May 5, 2011
